# ort_tensor_api

./: .gitignore  CMakeLists.txt  README.md
include/ort_tensor_api/: ort_tensor_api.hpp
ort_tensor_api/: CMakeLists.txt
ort_tensor_api/include/ort_tensor_api/: ort_tensor_api.hpp
ort_tensor_api/src/: ort_tensor_api.cpp
src/: ort_tensor_api.cpp
test/: CMakeLists.txt  config.h.in  test.cpp
